ubiquity (1.99.18) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Do not provide an inaccurate remaining time estimate for the file copy
    process (LP: #199834).  Thanks rugby471!
  * Call reboot as root.  Thanks Mario Limonciello!

  [ Michael Terry ]
  * Add a default oem-config post-install hook that restarts HAL.  This lets
    HAL pick up any keyboard changes we made.  LP: #395625

 -- Michael Terry <michael.terry@canonical.com>  Tue, 08 Sep 2009 11:24:33 -0400

ubiquity (1.99.17) karmic; urgency=low

  [ Colin Watson ]
  * Add support for the biosgrub partman method, to be added in
    partman-partitioning 71.

  [ Mario Limonciello ]
  * Use the usplash init script to stop usplash in the oem-config init script
    It seems to do a better job, and prevents a black screen on boot with some
    drivers that aren't as usplash friendly. (LP: #403021)

  [ Evan Dandrea ]
  * Merged Michael Terry's plugins branch (LP: #419989).  See
    http://wiki.ubuntu.com/Ubiquity/Plugins for instructions on writing
    new plugins.
  * Automatic update of included source packages: clock-setup
    0.98ubuntu2.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 07 Sep 2009 09:44:29 +0100

ubiquity (1.99.16) karmic; urgency=low

  * Go back to using /var/log/oem-config.log for oem-config logging; it's
    convenient and less confusing to have that in a separate file, rather
    than /var/log/installer/debug.
  * Be more explicit in logs when ubiquity is being run as oem-config.
  * Don't warn about missing (as opposed to present-but-unreadable)
    /etc/casper.conf.
  * Don't try to copy installation logs when running as oem-config.
  * Fix setting of TARGET when ubiquity is running as oem-config.
  * Stop the po directory's mostlyclean target from removing ubiquity.pot.
    We want to keep this file in the source package.
  * Import tempfile, to stop start_debconf crashing.
  * Automatic update of included source packages: grub-installer
    1.42ubuntu2.
