@@ -3,15 +3,15 @@ Section: admin
 Priority: optional
 Maintainer: Ubuntu Installer Team <ubuntu-installer@lists.ubuntu.com>
 Uploaders: Colin Watson <cjwatson@ubuntu.com>, Evan Dandrea <evand@ubuntu.com>
-Build-Depends: apt, bf-utf-source, dash, dctrl-tools, debconf (>= 0.5.0), debhelper (>= 7.3.10~), dpkg-dev (>= 1.9.0), intltool (>= 0.40.0), intltool-debian (>= 0.30+20040212), iso-codes, isoquery, libbogl-dev, libdebconfclient0-dev (>= 0.68), libdebian-installer4-dev (>= 0.41), libiw-dev (>= 27+28pre9), libparted1.8-dev, libxml2-dev (>= 2.6.24), locales, po-debconf (>= 1.0), python-central (>= 0.5), tzdata, wget, xkb-data (>= 0.9)
+Build-Depends: apt, bf-utf-source, dash, dctrl-tools, debconf (>= 0.5.0), debhelper (>= 7.3.10~), dh-di, dpkg-dev (>= 1.14.4), intltool (>= 0.40.0), intltool-debian (>= 0.30+20040212), iso-codes, isoquery, libbogl-dev, libdebconfclient0-dev (>= 0.68), libdebian-installer4-dev (>= 0.41), libiw-dev (>= 27+28pre9), libparted1.8-dev, libxml2-dev (>= 2.6.24), locales, po-debconf (>= 1.0), python-central (>= 0.5), tzdata, wget, xkb-data (>= 0.9)
 Standards-Version: 3.6.2.1
 XS-Python-Version: current, >= 2.4
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-installer/ubiquity/trunk
 
 Package: ubiquity
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, debconf (>= 1.4.72ubuntu5), ubiquity-frontend-${mangled-version}, ubiquity-artwork-${mangled-version}, laptop-detect, lsb-release, ubiquity-casper, python-apt (>= 0.6.16.2ubuntu4), ${console-setup-depends}, iso-codes, passwd, adduser, os-prober, rdate, ${partman-depends}, ecryptfs-utils, cryptsetup, python-pyicu
-Recommends: ${bootloader-recommends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, debconf (>= 1.4.72ubuntu5), ubiquity-frontend-${mangled-version}, ubiquity-artwork-${mangled-version}, laptop-detect, lsb-release, ubiquity-casper, python-apt (>= 0.6.16.2ubuntu4), ${console-setup-depends}, iso-codes, passwd, adduser, os-prober, rdate, ntfsprogs [any-alpha any-amd64 any-i386 any-ia64 any-lpia], ecryptfs-utils, cryptsetup, python-pyicu
+Recommends: grub-pc [any-amd64 any-i386 any-lpia] | grub [any-amd64 any-i386 any-lpia], flash-kernel [armel], yaboot [powerpc], hfsutils [powerpc], silo [sparc]
 Conflicts: ubuntu-express, espresso, espresso-utils, espresso-locale, espresso-keyboard-setup, espresso-kbd-chooser, espresso-timezone, user-setup (<< 0.05ubuntu6), partman, espresso-grub, espresso-yaboot
 Replaces: ubuntu-express, espresso, espresso-utils, espresso-locale, espresso-keyboard-setup, espresso-kbd-chooser, espresso-timezone, user-setup (<< 0.05ubuntu6), partman, espresso-grub, espresso-yaboot, ubiquity-frontend-gtk (<< 0.99.82)
 XB-Python-Version: ${python:Versions}
