@@ -1,0 +1,4 @@
+partman/undo.d lib/partman
+partman/update.d lib/partman
+partman/check.d lib/partman
+partman/commit.d lib/partman
