@@ -82,10 +82,6 @@ d-i/source/partconf/debian/partconf-*/* .
 
 # partman
 d-i/source/partman-*/debian/partman-*/* .
-partman/undo.d/* lib/partman/undo.d
-partman/update.d/* lib/partman/update.d
-partman/check.d/* lib/partman/check.d
-partman/commit.d/* lib/partman/commit.d
 ubiquity/components/partman.py usr/lib/ubiquity/ubiquity/components
 ubiquity/components/partman_commit.py usr/lib/ubiquity/ubiquity/components
 
